libs/wingc/src/jsify/snapshots/base_class_with_fields_inflight.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Code

```w

    class Base {
      inflight f: str;
      inflight init() {
        this.f = "hello";
      }
    }

    class Derived extends Base {
      inflight g: str;
      inflight init() {
        this.g = "world";
      }

      inflight foo() {
        this.f;
        this.g;
      }
    }
    
```

## inflight.Base-1.js

```js
module.exports = function({  }) {
  class Base {
    constructor({  }) {
    }
    async $inflight_init() {
      this.f = "hello";
    }
  }
  return Base;
}
```

## inflight.Derived-1.js

```js
module.exports = function({ $Base }) {
  class Derived extends $Base {
    constructor({  }) {
      super({  });
    }
    async foo() {
      this.f;
      this.g;
    }
    async $inflight_init() {
      this.g = "world";
    }
  }
  return Derived;
}
```

## preflight.js

```js
const $stdlib = require('@winglang/sdk');
const $outdir = process.env.WING_SYNTH_DIR ?? ".";
const $wing_is_test = process.env.WING_IS_TEST === "true";
const std = $stdlib.std;
class $Root extends $stdlib.std.Resource {
  constructor(scope, id) {
    super(scope, id);
    class Base extends $stdlib.std.Resource {
      constructor(scope, id, ) {
        super(scope, id);
        this._addInflightOps("$inflight_init", "f");
      }
      static _toInflightType(context) {
        return $stdlib.core.NodeJsCode.fromInline(`
          require("./inflight.Base-1.js")({
          })
        `);
      }
      _toInflight() {
        return $stdlib.core.NodeJsCode.fromInline(`
          (await (async () => {
            const BaseClient = ${Base._toInflightType(this).text};
            const client = new BaseClient({
            });
            if (client.$inflight_init) { await client.$inflight_init(); }
            return client;
          })())
        `);
      }
    }
    class Derived extends Base {
      constructor(scope, id, ) {
        super(scope, id);
        this._addInflightOps("foo", "$inflight_init", "g");
      }
      static _toInflightType(context) {
        return $stdlib.core.NodeJsCode.fromInline(`
          require("./inflight.Derived-1.js")({
            $Base: ${context._lift(Base)},
          })
        `);
      }
      _toInflight() {
        return $stdlib.core.NodeJsCode.fromInline(`
          (await (async () => {
            const DerivedClient = ${Derived._toInflightType(this).text};
            const client = new DerivedClient({
            });
            if (client.$inflight_init) { await client.$inflight_init(); }
            return client;
          })())
        `);
      }
    }
  }
}
const $App = $stdlib.core.App.for(process.env.WING_TARGET);
new $App({ outdir: $outdir, name: "main", rootConstruct: $Root, plugins: $plugins, isTestEnvironment: $wing_is_test, entrypointDir: process.env['WING_SOURCE_DIR'], rootId: process.env['WING_ROOT_ID'] }).synth();
```

